Fixed nav misalignment caused by scroll bar

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -28,7 +28,7 @@ body {
 
 footer {
 	background-color: $headerRed;
-    height: 80px;
+    height: 53px;
 	display: inline-block;
 	width: 110%;
 	position: absolute;
@@ -38,7 +38,6 @@ footer {
 	bottom: 0;
 	
 	p {
-		padding-top: 0.8em;
 		margin-left: -45%;
 
 		a {
@@ -150,4 +149,18 @@ pre {
 	white-space: -pre-wrap;		/* Opera 4-6 */
 	white-space: -o-pre-wrap;	/* Opera 7 */
 	word-wrap: break-word;		/* Internet Explorer 5.5+ */
+}
+
+.video-container {
+	position: relative;
+	height: 0;
+	overflow: hidden;
+
+	iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
 }
