--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -67,7 +67,7 @@
 
 	.extendnav {
 		margin-bottom: 10px;
-		margin-top: 51px;
+		margin-top: 60px;
 		transform: translate(0%, 0%);
 		transition: all 0.4s cubic-bezier(.1,.51,.97,.99);
 	}
@@ -174,10 +174,10 @@
 	#section {
 	
 		.sectDiv {
-			width: 100%;
-			margin-left: -20.5%;
-			padding-left: 22.5%;
-			padding-right: 40%;
+			width: 90%;
+			margin-left: -5%;
+			padding-left: 10%;
+			padding-right: 20%;
 			padding-top: 4em;
 			padding-bottom: 4em;
 		}
